Search & Filter code implementation added
Done by Harini Mohanasundaram

--- a/godelv/templates/home.html
+++ b/godelv/templates/home.html
@@ -1,4 +1,12 @@
 {% extends "layout.html" %}
 {% block content_1 %}
     <h1>GoDelv Home</h1>
-{% endblock content_1%}
+    <style>
+        body {
+            background-image: url('https://omniaccounts.co.za/wp-content/uploads/2021/09/5-Key-Benefits-of-Delivery-Management-Software.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+    </style>
+{% endblock content_1 %}
