--- a/godelv/templates/layout.html
+++ b/godelv/templates/layout.html
@@ -66,6 +66,7 @@
             {% if 'userType' not in session.keys() %}
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('trackbyid') }}">Track by ID</a></li>
+                    <li><a href="{{ url_for('searchandfilter') }}">Shipping Rates & Details</a></li>
 
                 </ul>
             {% endif %}
@@ -74,7 +75,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('customerhome') }}">Home</a></li>
                     <li><a href="{{ url_for('createshipment') }}">Create Shipment</a></li>
-                    <li><a href="#">Shipping Rates & Details</a></li>
+                    <li><a href="{{ url_for('searchandfilter') }}">Shipping Rates & Details</a></li>
                     <li><a href="{{ url_for('trackbyid') }}">Track by ID</a></li>
 
                 </ul>
@@ -83,6 +84,8 @@
                     <li><a href="{{ url_for('adminhome') }}">Home</a></li>
                     <li><a href="{{ url_for('addservice') }}">Add Service</a></li>
                     <li><a href="{{ url_for('delegateorders') }}">Delegate Order</a></li>
+                    <li><a href="https://dashboard.tawk.to/?lang=en#/admin/6393c265daff0e1306dbd273/chat-widget" target="_blank">Respond
+                        To Chat</a></li>
 
                 </ul>
             {% elif session['userType'] == 'DELIVERYDRIVER' %}
@@ -143,5 +146,21 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 -->
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6393c265daff0e1306dbd273/1gjsiunju';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+
+
 </body>
 </html>
